# regscope-engine

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml  hf-sync.yml
backend/: .dockerignore  .env  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: audit.py  clauses.py  crawl.py  documents.py  export.py  health.py  search.py
backend/app/crawler/: crawler.py  seed_urls.py
backend/app/db/: models.py  session.py  vector_store.py
backend/app/ingestion/: html_parser.py  normalizer.py  ocr_engine.py  pdf_extractor.py
backend/app/pipeline/: classifier.py  conflict_resolver.py  embedder.py  processor.py  segmenter.py  span_linker.py  verifier.py
backend/app/search/: retriever.py  vector_store.py
backend/app/workers/: celery_app.py  start_worker.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: cc9b8755d1a6_initial.py
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: NavigationShell.tsx  SearchBar.tsx  Shared.tsx  Sidebar.tsx  Topbar.tsx
infra/: .env.prod.template  docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.conf
scripts/: backup_db.sh  bootstrap_server.sh  deploy_production.sh  generate_secrets.py  health_check.py  seed_db.py  test_phase2.py  test_phase3.py  test_phase4.py  uptime_monitor.sh
(+10 files in other folders)
