[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regscope"
version = "0.1.0"
description = "Automated Cross-Border Data Compliance Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "celery",
    "redis",
    "qdrant-client",
    "playwright",
    "httpx",
    "pdfminer.six",
    "easyocr",
    "langdetect",
    "spacy",
    "beautifulsoup4",
    "sentence-transformers",
    "rank-bm25",
    "structlog",
    "pgvector",
    "sentry-sdk[fastapi,celery,sqlalchemy]",
    "prometheus-fastapi-instrumentator"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

